storage/falcon/Dbb.cpp
@@ -405,7 +405,6 @@ int32 Dbb::findNextRecord(Section *section, int32 startingRecord, Stream *stream
 int32 Dbb::createIndex(TransId transId, int indexVersion)
 {
 	int indexId;
-	
 	switch (indexVersion)
 		{
 		case INDEX_VERSION_0:
@@ -419,9 +418,6 @@ int32 Dbb::createIndex(TransId transId, int indexVersion)
 		default:
 			ASSERT(false);
 		}
-
-	if (serialLog)
-		serialLog->logControl->createIndex.append(this, transId, indexId, indexVersion);
 
 	return indexId;
 }
