storage/falcon/SRLVersion.h
@@ -43,7 +43,8 @@ static const int srlVersion13		= 13;	// Added savepoint id to SRLUpdateRecords		
 static const int srlVersion14		= 14;	// Added supernodes logging	March 7, 2008
 static const int srlVersion15		= 15;	// Added tablespace parameters to SRLCreateTableSpace	March 27, 2008
 static const int srlVersion16		= 16;	// Added SRLInventoryPage January 26, 2009
-static const int srlCurrentVersion	= srlVersion16;
+static const int srlVersion17		= 17;	// Log root page number in SRLCreateIndex
+static const int srlCurrentVersion	= srlVersion17;
 
 class SRLVersion : public SerialLogRecord  
 {
